--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 height="auto">
             </div>
             <div class="aboutMe">
+                <h1>Howdy!</h1>
                 <p>I’m Conor Quinn, an ambitious UX/UI designer based in Portland, OR. I specialize in user research and enjoy discovering user needs that may not be obvious. I have spent years working as a brewer in the Portland area, which has taught me firsthand the value of understanding a user’s needs and painpoints.</p>
                 <p>My skills include Figma, Adobe XD, Google Suite, and Microsoft Suite. I pride myself on my interview skills, presentation of data, and prototyping.</p>
                 <button>Let's Talk<img src="images\Rock.png"
